# uv-cli

./: README.md  pyproject.toml
src/uv_cli/: __init__.py
