[project]
name = "uv-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "seandlg", email = "16638561+seandlg@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
uv-cli = "uv_cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
